# src/swagger-ui/swagger.json
@@ -168,6 +168,68 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Pagination_User_": {
+				"properties": {
+					"currentPage": {
+						"type": "number",
+						"format": "double",
+						"description": "当前分页"
+					},
+					"pageSize": {
+						"type": "number",
+						"format": "double",
+						"description": "分页大小"
+					},
+					"total": {
+						"type": "number",
+						"format": "double",
+						"description": "分页总条数"
+					},
+					"list": {
+						"items": {
+							"$ref": "#/components/schemas/User"
+						},
+						"type": "array",
+						"description": "分页数据"
+					}
+				},
+				"required": [
+					"currentPage",
+					"pageSize",
+					"total",
+					"list"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserPagination": {
+				"$ref": "#/components/schemas/Pagination_User_"
+			},
+			"CommonResponse_UserPagination_": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"code": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/UserPagination"
+					}
+				},
+				"required": [
+					"success",
+					"code",
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CommonResponse_User_": {
 				"properties": {
 					"success": {
@@ -533,6 +595,48 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/user/list": {
+			"get": {
+				"operationId": "List",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CommonResponse_UserPagination_"
+								}
+							}
+						}
+					}
+				},
+				"description": "用户列表",
+				"tags": [
+					"User 用户模块"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "currentPage",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageSize",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/user/register": {
